Developer-area done

--- a/index.html
+++ b/index.html
@@ -14,26 +14,38 @@
    <section class="my-mission-area">
          <div class="heading"><h1>My Mission in <span class="color-hilight">2022</span></h1></div>
       <div class="flexible-container">
-        <div class="half-width">
+        <div class="single-item">
             <img src="images/illustrators/illustrator-1.png" alt="">
             <h1>Mission</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam provident, optio nulla obcaecati et laudantium autem dolore perferendis dolorum.
             </p>
         </div>
-        <div class="half-width">
+        <div class="single-item">
             <img src="images/illustrators/illustrator-2.png" alt="">
             <h1>visson</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam provident, optio nulla obcaecati et laudantium autem dolore perferendis dolorum.
             </p>
         </div>
-        <div class="half-width">
+        <div class="single-item">
             <img src="images/illustrators/illustrator-3.png" alt="">
             <h1>goal</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam provident, optio nulla obcaecati et laudantium autem dolore perferendis dolorum.
             </p>
         </div>
       </div>
-    
    </section>
+   <section class="developer-area">
+    <div class="half-width">
+        <img src="images/pictures/coding.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Develop<br>
+        Without limits</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, eum. Placeat, quidem reprehenderit totam sed consequuntur asperiores explicabo eveniet praesentium, repellendus commodi dolores at sequi debitis expedita, nam est quae?</p>
+        <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
+    </div>
+   </section>
+   
+
 </body>
 </html>
