Our community or footer section done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,19 @@
         <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
     </div>
    </section>
-   
-
+   <section class="developer-area">
+    <div class="half-width">
+        <h2>Know our <br> Global Community</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui labore rerum eligendi atque quam fuga, sapiente culpa corrupti ullam velit consectetur est. Voluptatem ratione officiis cum unde molestias enim neque.</p>
+        <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
+    </div>
+    <div class="half-width">
+        <img src="images/pictures/project.png" alt="">
+    </div>
+   </section>
+   <footer>
+       <h1>Mission <span class="color-hilight">2022</span></h1>
+       <p>Hard work, Perseverance and Determination for 2022</p>
+   </footer>
 </body>
 </html>
