start mission added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="start-mission">
+        <div class="half-width">
+            <p>Stay Focused on</p>
+            <p>Mission 2022</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, dignissimos. Repellat quibusdam numquam magnam placeat repellendus suscipit modi voluptas consequatur.</p>
+            <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Explor Now</a>
+            <p>Scroll down to explore more about us
+            </p>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-0.png" alt="">
+        </div>
+    </section>
    <section class="my-mission-area">
          <div class="heading"><h1>My Mission in <span class="color-hilight">2022</span></h1></div>
       <div class="flexible-container">
@@ -58,6 +71,6 @@
    <footer>
        <h1>Mission <span class="color-hilight">2022</span></h1>
        <p>Hard work, Perseverance and Determination for 2022</p>
-   </footer>
+   </footer> 
 </body>
 </html>
