--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             <div id="mission" class="single-item">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h2>Mission</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam provident, optio nulla obcaecati et laudantium autem dolore perferendis dolorum.
+                <p>Lets have a look at what my mission were for 2022.
                 </p>
             </div>
-            <div id="visson" class="single-item">
+            <div id="vision" class="single-item">
                 <img src="images/illustrators/illustrator-2.png" alt="">
-                <h2>Visson</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam provident, optio nulla obcaecati et laudantium autem dolore perferendis dolorum.
+                <h2>Vision</h2>
+                <p>Lets have a look at what my vision were for 2022.
                 </p>
             </div>
             <div id="goal" class="single-item">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h2>Goal</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quisquam provident, optio nulla obcaecati et laudantium autem dolore perferendis dolorum.
+                <p>Lets have a look at what my goals were for 2022.
                 </p>
             </div>
       </div>
@@ -67,7 +67,7 @@
             <div class="dev-right">
                 <h2>Develop<br>
                 Without limits</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia, eum. Placeat, quidem reprehenderit totam sed consequuntur asperiores explicabo eveniet praesentium, repellendus commodi dolores at sequi debitis expedita, nam est quae?</p>
+                <p>Development Without Limit's strategic vision and attention to detail were key to our project's success—that, and our shared commitment to developing and strengthening the afterschool profession.Time is of the essence. Now you must ensure that the teams on the ground have the knowledge and skills they need for successful implementation.</p>
                 <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
             </div>
       </div>
@@ -79,7 +79,7 @@
     <div class="container">
         <div class="left-item">
             <h2>Know our <br> Global Community</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui labore rerum eligendi atque quam fuga, sapiente culpa corrupti ullam velit consectetur est. Voluptatem ratione officiis cum unde molestias enim neque.</p>
+            <p>Global Communities delivers essential solutions to complex challenges from the intersection of humanitarian assistance, sustainable development and financial inclusion.Our support for communities at the forefront of their own development includes bringing together local leaders, governments, civil society and the private sector to achieve a shared vision of a more just, prosperous and equitable global community.</p>
             <a class="link-button" href="http://" target="_blank" rel="noopener noreferrer">Read the Documentation</a>
         </div>
         <div class="right-item">
