clint's review agra done

--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
 
     </div>
    </section>
+   <!-- My Latest Works -->
+    <section class="our-happy-clients">
+        <h1>Our Happy Client's</h1>
+    <div class="container">
+            <div id="mission" class="single-item">
+                <img src="images/person/person-3.png" alt="">
+                <h2>JonDuo</h2>
+                <p> review page design demo,css rating bar,customer project review page design,pure css review page design,html css feedback page design.
+                </p>
+            </div>
+            <div id="vision" class="single-item">
+                <img src="images/person/person-4.png" alt="">
+                <h2>Jack Smith</h2>
+                <p>review page design demo,css rating bar,customer project review page design,pure css review page design,html css feedback page design.
+                </p>
+            </div>
+            <div id="goal" class="single-item">
+                <img src="images/person/person-5.png" alt="">
+                <h2>Rebecca Flex</h2>
+                <p>review page design demo,css rating bar,customer project review page design,pure css review page design,html css feedback page design.
+                </p>
+            </div>
+    </div>
+    </section>
 
    <footer>
        <h1>Mission <span class="color-hilight">2022</span></h1>
